test/ra.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-kyma-environment-broker
spec:
  gateways:
  - kyma-system/kyma-gateway
  hosts:
  - keb.cp.dev.kyma.cloud.sap
  http:
  - corsPolicy:
      allowHeaders:
      - Authorization
      - Content-Type
      allowMethods: ["GET"]
      allowOrigins:
      - regex: ".*"
    match:
    - uri:
        regex: /info/runtimes
    route:
    - destination:
        host: kcp-kyma-environment-broker
        port:
          number: 80
  - corsPolicy:
      allowHeaders:
      - Authorization
      - Content-Type
      - X-Broker-API-Version
      allowMethods: ["GET", "PUT", "DELETE"]
      allowOrigins:
      - regex: ".*"
    match:
    - uri:
        regex: /oauth/([^/]+/)?v2/.*
    route:
    - destination:
        host: kcp-kyma-environment-broker
        port:
          number: 80
  - corsPolicy:
      allowHeaders:
        - Authorization
        - Content-Type
      allowMethods: ["GET"]
      allowOrigins:
      - regex: ".*"
    match:
      - uri:
          regex: /runtimes
    route:
      - destination:
          host: kcp-kyma-environment-broker
          port:
            number: 80
  - corsPolicy:
      allowHeaders:
        - Authorization
        - Content-Type
      allowMethods: ["GET"]
      allowOrigins:
      - regex: ".*"
    match:
      - uri:
          regex: /kubeconfig/.*
    route:
      - destination:
          host: kcp-kyma-environment-broker
          port:
            number: 80
